--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^5.3.0",
+    "hoek": "^6.1.3",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
