--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^5.0.1",
     "concurrently": "^5.3.0",
     "hoek": "^6.1.3",
     "json-server": "^0.16.1",
